# syncwav

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/syncwav/: Context.h  Core.h  Format.h  Log.h  Utils.h  context.h  core.h  export.h  format.h  log.h  queue.h  sinks.h  utils.h
include/syncwav/backend/ffmpeg/: format.h
include/syncwav/backend/miniaudio/: device.h  format.h
include/syncwav/decoder/: audio.h
include/syncwav/factories/: input-factory.h  output-factory.h
include/syncwav/io/: CaptureInput.h  FileInput.h  LocalOutput.h  LoopbackInput.h  Sinks.h  TCPInput.h  TCPOutput.h  capture-input.h  file-input.h  input.h  local-output.h  loopback-input.h  output.h  sinks.h  tcp-input.h  tcp-output.h
include/syncwav/middlewares/: Middleware.h  middleware.h
include/syncwav/platform/: device.h
include/syncwav/tick/: tick-consumer.h  tick-producer.h
src/cli/: main.cpp
src/core/: context.cpp  input.cpp  miniaudio.cpp  output.cpp  utils.cpp
src/core/backend/miniaudio/: device.cpp
src/core/decoder/: audio.cpp
src/core/factories/: input-factory.cpp  output-factory.cpp
src/core/io/: CaptureInput.cpp  FileInput.cpp  LocalOutput.cpp  LoopbackInput.cpp  TCPInput.cpp  TCPOutput.cpp  capture-input.cpp  file-input.cpp  input.cpp  local-output.cpp  loopback-input.cpp  output.cpp  tcp-input.cpp  tcp-output.cpp
src/core/middlewares/: middleware.cpp
src/core/platform/: device.cpp
src/core/tick/: tick-consumer.cpp  tick-producer.cpp
src/test/: main.cpp
src/tui/: main.cpp
